# ah-talent-finder

./: LICENSE  README.md  SKILL.md  Step1-轻量画像收集.md  Step2-深度版画像.md  Step3-职业方向与验证方案.md  Step4-命理交叉验证.md  pyproject.toml
data/: 追问规则库.md
evals/: trigger_cases.jsonl
examples/: README.md
reference/: 天赋理论框架库.md  设计哲学.md  追问规则库.md
scripts/: __init__.py  session.py
steps/: Step1-轻量画像收集.md  Step2-深度版画像.md  Step3-职业方向与验证方案.md  Step4-命理交叉验证.md
